Fixing mobile overflow

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -9,6 +9,7 @@
   img {
     border-radius: 4px;
     height: 60vh;
+    max-width: 100vw;
   }
 
   .post-banner-blur {
